<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_sur_la_r_servation"/>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="left|center"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total_payer"/>

        <TextView
            android:id="@+id/prix_reservation"
            android:gravity="right"
            android:paddingTop="0dp"
            android:textColor="@color/colorYellowDark"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"/>

        <TextView
            android:layout_marginLeft="5dp"
            android:gravity="right"
            android:paddingTop="0dp"
            android:textColor="@color/colorYellowDark"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="$"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center|left"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nombre_de_jour"/>

        <TextView
            android:layout_gravity="right"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:id="@+id/layout_date_debut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|left">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_d_but"/>

            <TextView
                android:textSize="16sp"
                android:singleLine="true"
                android:gravity="center|left"
                android:id="@+id/date_debut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:id="@+id/layout_date_fin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|left">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_fin"/>

            <TextView
                android:textSize="16sp"
                android:singleLine="true"
                android:gravity="center|left"
                android:id="@+id/date_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/input_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

        <EditText
            android:maxLength="12"
            android:textSize="16sp"
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/contact" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">

        <TextView
            android:layout_marginRight="5dp"
            android:layout_weight="5"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:layout_centerHorizontal="true"
            android:cursorVisible="false"
            android:gravity="center"
            android:id="@+id/envoyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:text="@string/envoyer"
            android:textColor="@color/colorLogoBlack"
            android:layout_above="@+id/creer_compte"/>

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:gravity="center"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_second"
            android:layout_alignParentRight="true"
            android:id="@+id/annuler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/annuler" />
    </LinearLayout>
</LinearLayout>